# VoroApprox

./: CMakeLists.txt  README.md  timer.h  xlog.h
image-version/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  matrix.h  pixelset.h  polynomial.cpp  polynomial.h  rasterizer.cpp  rasterizer.h  render.cpp  render.h  voroapprox.cpp  voroapprox.h
renders/: CMakeLists.txt  image_render.cpp  image_render.h  lines_render.h  points_render.h  shader_program.cpp  shader_program.h
voronoi/: CMakeLists.txt  delaunay2.cpp  delaunay2.h  dual_segment.h  polygon_cell.h  utility.h  voronoi2.h
